--- a/blog/src/App.css
+++ b/blog/src/App.css
@@ -29,6 +29,13 @@ li {
   border-bottom: 1px solid gray;
 }
 
+.modal {
+  margin-top: 20px;
+  padding: 20px;
+  background: #eee;
+  text-align: left;
+}
+
 
 
 .App {
